--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "Paul Schalbetter",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.10"
+    "body-parse": "^0.1.0",
+    "express": "^4.16.4",
+    "mongodb": "^3.1.10",
+    "mongoose": "^5.4.3"
   }
 }
