--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
-    "test-watch":"nodemon --exec 'npm test'"
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "Paul Schalbetter",
   "license": "ISC",
   "dependencies": {
     "body-parse": "^0.1.0",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
-    "mongoose": "^5.4.3"
+    "mongoose": "^5.4.3",
+    "validator": "^10.10.0"
   },
   "devDependencies": {
     "expect": "^23.6.0",
